# ImageProcessPractive

./: .gitignore  CMakeLists.txt  conanfile.txt  readme.md
include/: Common.h  ProcessMethod.h
src/: ProcessMethod.cpp  main.cpp
src/modules/OpenCvWrap/: Helper.cpp  Helper.h  Image.cpp  Image.h
